@@ -16,4 +16,5 @@ lang_error
 tables
 binary_test
 moreandcount
+earlybind
 
