@@ -1,6 +1,6 @@
 TESTS		=	t0001 t0002 t0003 t0004 connect print date \
 			norowset funccall lang_error tables \
-			binary_test moreandcount
+			binary_test moreandcount earlybind
 check_PROGRAMS	=	$(TESTS)
 
 t0001_SOURCES	=	t0001.c common.c common.h
@@ -15,7 +15,8 @@ funccall_SOURCES	= funccall.c common.c common.h
 lang_error_SOURCES	= lang_error.c common.c common.h
 tables_SOURCES	= tables.c common.c common.h
 binary_test_SOURCES	= binary_test.c common.c common.h
-moreandcount_SOURCES = moreandcount.c common.c common.h
+moreandcount_SOURCES	= moreandcount.c common.c common.h
+earlybind_SOURCES	= earlybind.c common.c common.h
 
 LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
